Kland image display

--- a/cmd/static/kland/templates/footer.tmpl
+++ b/cmd/static/kland/templates/footer.tmpl
@@ -8,5 +8,5 @@
 <div class="about">
    <span>haloopdy 2017-2024</span>
    <span class="version">V.{{.appversion}}</span>
-   <span class="info">GOMEMLIMIT: {{.runtimeinfo.GoMemLimit}}</span>
+   <span class="info">GOMEMLIMIT: {{.runtimeInfo.GoMemLimit}}</span>
 </div>
