Kland upload at least somewhat working

--- a/cmd/static/kland/templates/imagenav.tmpl
+++ b/cmd/static/kland/templates/imagenav.tmpl
@@ -3,7 +3,7 @@
    <a href="{{.root}}/image?page={{.previousPage}}&bucket={{.bucket}}&view={{.view}}">Previous {{.ipp}}</a>
    {{end}}
    {{if .nextPage}}
-   <a href="{{.root}}/image?page={{.nextPage}}&bucket={{.vucket}}&view={{.view}}">Next {{.ipp}}</a>
+   <a href="{{.root}}/image?page={{.nextPage}}&bucket={{.bucket}}&view={{.view}}">Next {{.ipp}}</a>
    {{end}}
    <a data-slideshow>Slideshow</a>
 </div>
