--- a/cmd/static/makai/templates/tinycomputer_index.tmpl
+++ b/cmd/static/makai/templates/tinycomputer_index.tmpl
@@ -44,9 +44,9 @@
 
 		window.addEventListener("load", initialize);
     window.addEventListener("load", function() {
-      var statuslights = document.querySelectorAll("#statusbox .statuslight");
+      var statuslights = document.querySelectorAll("#statusbox .statuslight img");
       for(var i = 0; i < statuslights.length; i++) {
-        statuslights.src = statusOffSrc;
+        statuslights[i].src = statusOffSrc;
       }
     });
 	</script>
@@ -63,43 +63,43 @@
 	</div>
 	<div id="statusbox" class="floatbox">
 		<div class="statuslight">
-			<img id="wimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="wimg" height="20" width="20"/>
 			<p>W</p>
 		</div>
 		<div class="statuslight">
-			<img id="aimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="aimg" height="20" width="20"/>
 			<p>A</p>
 		</div>
 		<div class="statuslight">
-			<img id="simg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="simg" height="20" width="20"/>
 			<p>S</p>
 		</div>
 		<div class="statuslight">
-			<img id="dimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="dimg" height="20" width="20"/>
 			<p>D</p>
 		</div>
 		<div class="statuslight">
-			<img id="upimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="upimg" height="20" width="20"/>
 			<p>▲</p>
 		</div>
 		<div class="statuslight">
-			<img id="leftimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="leftimg" height="20" width="20"/>
 			<p>◄</p>
 		</div>
 		<div class="statuslight">
-			<img id="downimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="downimg" height="20" width="20"/>
 			<p>▼</p>
 		</div>
 		<div class="statuslight">
-			<img id="rightimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="rightimg" height="20" width="20"/>
 			<p>►</p>
 		</div>
 		<div class="statuslight">
-			<img id="loadimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="loadimg" height="20" width="20"/>
 			<p>L</p>
 		</div>
 		<div class="statuslight">
-			<img id="runimg" src="{{.oroot}}/resource/status_off.png" height="20" width="20"/>
+			<img id="runimg" height="20" width="20"/>
 			<p>R</p>
 		</div>
 	</div>
