--- a/cmd/static/kland/image.css
+++ b/cmd/static/kland/image.css
@@ -23,6 +23,9 @@ body {
    margin: 0;
    margin-bottom: 1rem;
 }
+.warning {
+  background-color: coral !important;
+}
 .linknavigation a:visited, .linknavigation a:link, .linknavigation a {
    box-shadow: 0.1rem 0.2rem 0.3rem -0.0rem rgba(33,33,33,0.05), 
                0.2rem 0.2rem 0.3rem -0.2rem rgba(33,33,33,0.05),
