Slightly clearer lookup button

--- a/cmd/static/kland/templates/image.tmpl
+++ b/cmd/static/kland/templates/image.tmpl
@@ -25,7 +25,7 @@
          all with a larger hash, but that breaks all old links.</p>
       <form id="hashlookup" action="{{.root}}/hashlookup" target="_blank">
         <input placeholder="Old hash" name="hash">
-        <input type="submit" value="Lookup">
+        <input type="submit" value="Lookup converted link">
       </form>
     </div>
     {{end}}
