Drawing works in browser

--- a/cmd/static/makai/templates/draw_index.tmpl
+++ b/cmd/static/makai/templates/draw_index.tmpl
@@ -142,7 +142,7 @@
             data.append("drawing", drawer.drawer.ToString()); 
             data.append("name", drawingName);
             data.append("action", "save"); 
-            RequestUtilities.XHRSimple(DRAWROOT + "manager", function(response)
+            RequestUtilities.XHRSimple(DRAWROOT + "manager/", function(response)
             {
                var output = JSON.parse(response);
                if(output.result)
@@ -227,7 +227,7 @@
          data.append("artistID", getArtistID());
          data.append("drawingID", id);
          data.append("action", "load");
-         RequestUtilities.XHRSimple(DRAWROOT + "manager", function(response)
+         RequestUtilities.XHRSimple(DRAWROOT + "manager/", function(response)
          {
             try
             {
@@ -268,7 +268,7 @@
          var data = new FormData();
          data.append("artistID", artistID);
          data.append("action", "list");
-         RequestUtilities.XHRSimple(DRAWROOT + "manager", function(response)
+         RequestUtilities.XHRSimple(DRAWROOT + "manager/", function(response)
          {
             //console.debug("Response for file list refresh: \n" + response);
             var json = JSON.parse(response);
