--- a/cmd/static/makai/templates/offlineanimator_index.tmpl
+++ b/cmd/static/makai/templates/offlineanimator_index.tmpl
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <script>
-        var KLANDURL = "{{.klandurl}}";
+        var KLANDURL = "{{RawUrl .klandurl}}";
       </script>
       <script src="{{.oroot}}/randomous.js?{{.cachebust}}"></script>
       <script src="{{.oroot}}/randomousCanvas.js?{{.cachebust}}"></script>
