Sudoku user limit

--- a/cmd/static/makai/templates/index.tmpl
+++ b/cmd/static/makai/templates/index.tmpl
@@ -13,5 +13,7 @@
             <li><a href="{{.root}}/animator">Memories of smilebasicsource.com/animator</a></li>
         </ul>
         <p><a href="{{.klandurl}}">Kland</a> is still in use at the original location, although slightly crippled.</p>
+        <hr>
+        <footer><a href="https://github.com/randomouscrap98/goldmonolith">v{{.appversion}}</a>&nbsp;<span>haloopdy - 2024</span></footer>
     </body>
 </html>
